@@ -8,6 +8,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.List;
 
 /**
@@ -79,25 +80,52 @@ public class AppTest {
 
     @Test
     public void test6() throws IOException {
-        String ret = Files.readString(Path.of("E:\\project\\vba\\文件传送\\temp文件做成\\0472201102_F8211802.csv"), StandardCharsets.UTF_8);
-        System.gc();
 //        String ret = Files.readString(Path.of("E:\\project\\vba\\文件传送\\temp文件做成\\0472201102_F8211802.csv"), StandardCharsets.UTF_8);
-//        List<String> codeList = getCodeList();
-//
-//        for (String str : codeList) {
-//            String ret1 = ret.replaceAll("0670102706", str);
-//            String path = "\\\\007-D1024\\forwkh\\v$\\SharedFolder\\MIRACLE_D\\SENDDATA\\" + str + "\\" + "201905\\" + "F8211905.csv";
-//            File file = new File(path);
-//            if(!file.isDirectory()){
-//                file.getParentFile().mkdirs();
-//            }
-//            Files.write(Paths.get(path), ret1.getBytes());
-//        }
+        String ret = Files.readString(Path.of("E:\\project\\vba\\文件传送\\SC_伝送サービス\\F8211802A1770103149.csv"), StandardCharsets.UTF_8);
+        List<String> codeList = getCodeList();
 
+        for (String str : codeList) {
+            String ret1 = ret.replaceAll("1770103149", str);
+            String path = "\\\\007-D1024\\forwkh\\v$\\SharedFolder\\MIRACLE_D\\SENDDATA\\" + str + "\\" + "201905\\" + "F8211905.csv";
+            File file = new File(path);
+            if (!file.isDirectory()) {
+                file.getParentFile().mkdirs();
+            }
+            Files.write(Paths.get(path), ret1.getBytes());
+        }
+
+    }
+
+    @Test
+    public void test7() throws IOException {
+        List<String> codeList = Files.readAllLines(Path.of("E:\\project\\vba\\文件传送\\最新的js.js"), StandardCharsets.UTF_8);
+        File file = new File("D:\\webdownload\\js\\filesummary1.js");
+        if (!file.isDirectory()) {
+            file.getParentFile().mkdirs();
+        }
+        StringBuilder stringBuilder = new StringBuilder();
+        for (String str : codeList) {
+            if (str.contains("//")) {
+                continue;
+            }
+            stringBuilder.append(str).append("\r\n");
+
+        }
+        Files.write(Paths.get("D:\\webdownload\\js\\filesummary1.js"), stringBuilder.toString().getBytes());
     }
 
     private List<String> getCodeList() throws IOException {
         return Files.readAllLines(Path.of("E:\\project\\vba\\文件传送\\temp文件做成\\code.txt"), StandardCharsets.UTF_8);
+    }
+
+    @Test
+    public void test8() throws IOException {
+        List<Long> longs = new ArrayList<>();
+        longs.add(1L);
+        longs.add(2L);
+        Long [] ss = longs.toArray(new Long[0]);
+        Long [] sss = new Long[]{1l};
+        System.out.println(ss);
     }
 }
 
